# tax-calculator

./: Cargo.toml  README.md  extensions.json
src/: main.rs
ui/: appwindow.slint
