[package]
name = "tax-calculator"
version = "1.0.0"
authors = ["Pacey Gillum"]
edition = "2021"
build = "build.rs"
description = "This program calculates both federal and Georgia state taxes for 2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Tax Calculator"
identifier = "io.github.thegamer1109.tax-calculator"